@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-30T08:31:28Z",
-  "count" : 120,
-  "count_minmax" : [ 120, 120 ],
-  "count_decinc" : [ -0, +120 ],
+  "timestamp" : "2022-06-30T16:37:52Z",
+  "count" : 246,
+  "count_minmax" : [ 120, 246 ],
+  "count_decinc" : [ -0, +246 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
