@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-06-16T00:00:00Z",
-      "count": 184,
+      "count": 58,
       "uniques": 2
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-06-30T00:00:00Z",
-      "count": 120,
+      "count": 246,
       "uniques": 2
     }
   ]
