@@ -1,3 +1,10 @@
+2022-06-30T16:37:52Z:
+* notice: last 14d: unq all: 12 4896
+* notice: prev accum: outdated-unq outdated-all / unq all: 650 33985 / 689 38881
+* notice: next accum: outdated-unq outdated-all / unq all: 650 33985 / 689 38881
+* notice: prev exec diff / last date diff / accum: unq all: +0 +126 -0 -126 / +2 +246 -0 -0 / 2 246
+* notice: removed / changed dates: [] / [2022-06-16 2022-06-30]
+
 2022-06-30T08:31:28Z:
 * notice: last 14d: unq all: 12 4896
 * notice: prev accum: outdated-unq outdated-all / unq all: 650 33985 / 687 38863
